<?xml version="1.0"?>
<package format="2">
  <name>gvd_skeleton</name>
  <version>0.0.0</version>
  <description>
    Global planning with gvd skeletons.
  </description>

  <maintainer email="chanjoon.park@kaist.ac.kr">Chanjoon Park</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_skeleton</depend>
  <depend>voxblox_planning_common</depend>
  <depend>mav_msgs</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_trajectory_generation_ros</depend>
</package>
